--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,24 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
 node_modules
-ref.jpg
-seq.txt
-npm-debug.log
-.DS_Store
+dist
+dist-ssr
 *.local
-.vscode
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
